# Lab3.Stack-and-Queue

./: CMakeLists.txt  README.md
expression/: CMakeLists.txt  main.cpp
expression/gui/: CMakeLists.txt  MyForm.cpp  MyForm.h
expressionlib/: CMakeLists.txt  MyExpression.cpp  MyExpression.h
expressiontest/: CMakeLists.txt  ExpressionTest.cpp
queue/: CMakeLists.txt  main.cpp
queue/gui/: CMakeLists.txt  MyForm.cpp  MyForm.h
queuelib/: CMakeLists.txt  MyQueue.cpp  MyQueue.h
queuetest/: CMakeLists.txt  QueueTest.cpp
stack/: CMakeLists.txt  main.cpp
stacklib/: CMakeLists.txt  MyStack.cpp  MyStack.h
stacktest/: CMakeLists.txt  StackTest.cpp
